--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -1,48 +1,53 @@
 <p class="h1 text-center">Ajouter des données</p>
 
 
-<div class="form-floating">
-    <input type="text" class="form-control mt-4" id="floatingPassword" placeholder="Prenom">
-    <label for="floatingPassword">Prenom</label>
-</div>
-<div class="form-floating">
-    <input type="text" class="form-control mt-4" id="floatingPassword" placeholder="Nom">
-    <label for="floatingPassword">Nom</label>
-</div>
+<form action="./upload.php" method="post">
 
 
 
-
-<div class="form-group">
-    <label for="basic-url"
-    class="form-label mt-4">Age (18 à 70ans)</label>
-    <div class="input-group mb-3">
-        <input type="number" class="form-control" id="replyNumber" min="18" max="70" step="1" data-bind="value:replyNumber" placeholder="Renseigner votre age" >
+    <div class="form-floating">
+        <input type="text" class="form-control mt-4" id="floatingPassword" placeholder="Prenom">
+        <label for="floatingPassword">Prenom</label>
     </div>
-</div>
-  
-
-<div class="form-group">
-    <div class="input-group mb-3 mt-4">
-        <span class="input-group-text">Taille (1.26m à 3m)</span>
-        <input type="number" class="form-control" id="replyNumber" min="1.26" max="3" step="0.01" data-bind="value:replyNumber" >
-        <span class="input-group-text">m</span>
+    <div class="form-floating">
+        <input type="text" class="form-control mt-4" id="floatingPassword" placeholder="Nom">
+        <label for="floatingPassword">Nom</label>
     </div>
-</div>
-
-<div class="form-check form-check-inline">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-    <label class="form-check-label" for="inlineRadio1">Femme</label>
-</div>
-
-<div class="form-check form-check-inline ">
-    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-    <label class="form-check-label" for="inlineRadio2">Homme</label>
-</div>
 
 
-<div class="d-flex flex-row-reverse bd-highlight">
-<button type="button" class="btn btn-primary">Enregistrer des données</button>
-</div>
 
 
+    <div class="form-group">
+        <label for="basic-url"
+        class="form-label mt-4">Age (18 à 70ans)</label>
+        <div class="input-group mb-3">
+            <input type="number" class="form-control" id="replyNumber" min="18" max="70" step="1" data-bind="value:replyNumber" placeholder="Renseigner votre age" >
+        </div>
+    </div>
+    
+
+    <div class="form-group">
+        <div class="input-group mb-3 mt-4">
+            <span class="input-group-text">Taille (1.26m à 3m)</span>
+            <input type="number" class="form-control" id="replyNumber" min="1.26" max="3" step="0.01" data-bind="value:replyNumber" >
+            <span class="input-group-text">m</span>
+        </div>
+    </div>
+
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+        <label class="form-check-label" for="inlineRadio1">Femme</label>
+    </div>
+
+    <div class="form-check form-check-inline ">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+        <label class="form-check-label" for="inlineRadio2">Homme</label>
+    </div>
+
+
+    <div class="d-flex flex-row-reverse bd-highlight">
+    <button type="button" class="btn btn-primary">Enregistrer des données</button>
+    </div>
+
+    
+</form>
