--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -1,7 +1,7 @@
 <p class="h1 text-center">Ajouter des données</p>
 
 
-<form action="./upload.php" method="post">
+<form action="formulaire.php" method="post">
 
 
 
@@ -44,10 +44,15 @@
         <label class="form-check-label" for="inlineRadio2">Homme</label>
     </div>
 
+</form>
 
-    <div class="d-flex flex-row-reverse bd-highlight">
+    <div class="d-flex flex-row-reverse bd-highlight mt-4">
     <button type="button" class="btn btn-primary">Enregistrer des données</button>
     </div>
 
+
+    <div class="alert alert-dismissible alert-success">
+        <p class="text-center mb-1 mt-2">Données Sauvegardées</p>
+    </div>
+
     
-</form>
