--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -1,16 +1,16 @@
 <p class="h1 text-center">Ajouter des données</p>
 
 
-<form action="formulaire.php" method="post">
+<form action="index.php" method="post">
 
 
 
     <div class="form-floating">
-        <input type="text" class="form-control mt-4" id="floatingPassword" placeholder="Prenom">
+        <input type="text" name="first_name" class="form-control mt-4" id="floatingPassword" placeholder="Prenom" required>
         <label for="floatingPassword">Prenom</label>
     </div>
     <div class="form-floating">
-        <input type="text" class="form-control mt-4" id="floatingPassword" placeholder="Nom">
+        <input type="text" name="last_name" class="form-control mt-4" id="floatingPassword" placeholder="Nom" required>
         <label for="floatingPassword">Nom</label>
     </div>
 
@@ -21,7 +21,7 @@
         <label for="basic-url"
         class="form-label mt-4">Age (18 à 70ans)</label>
         <div class="input-group mb-3">
-            <input type="number" class="form-control" id="replyNumber" min="18" max="70" step="1" data-bind="value:replyNumber" placeholder="Renseigner votre age" >
+            <input type="number" name="age" class="form-control" id="replyNumber" min="18" max="70" step="1" data-bind="value:replyNumber" placeholder="Renseigner votre age" required >
         </div>
     </div>
     
@@ -29,30 +29,25 @@
     <div class="form-group">
         <div class="input-group mb-3 mt-4">
             <span class="input-group-text">Taille (1.26m à 3m)</span>
-            <input type="number" class="form-control" id="replyNumber" min="1.26" max="3" step="0.01" data-bind="value:replyNumber" >
+            <input type="number" name="size" class="form-control" id="replyNumber" min="1.26" max="3" step="0.01" data-bind="value:replyNumber" required >
             <span class="input-group-text">m</span>
         </div>
     </div>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-        <label class="form-check-label" for="inlineRadio1">Femme</label>
+        <input class="form-check-input" type="radio" name="sex_civility" id="femme" value="women"  required>
+        <label class="form-check-label" for="inlineRadio1" >Femme</label>
     </div>
 
     <div class="form-check form-check-inline ">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+        <input class="form-check-input" name="sex_civility" type="radio" id="homme" value="man" required>
         <label class="form-check-label" for="inlineRadio2">Homme</label>
+    </div>
+    
+    <div class="d-flex flex-row-reverse bd-highlight mt-4">
+    <button name="enregistrer" type="submit" class="btn btn-primary">Enregistrer des données</button>
     </div>
 
 </form>
-
-    <div class="d-flex flex-row-reverse bd-highlight mt-4">
-    <button type="button" class="btn btn-primary">Enregistrer des données</button>
-    </div>
-
-
-    <div class="alert alert-dismissible alert-success">
-        <p class="text-center mb-1 mt-2">Données Sauvegardées</p>
-    </div>
 
     
