--- a/includes/footer.inc.html
+++ b/includes/footer.inc.html
@@ -1,3 +1,3 @@
 <footer>
-    <p class="text-center">&copy; Bodart Florian - <a href="https://github.com/BodartFlorian">GitHub</a></p>
+    <p class="text-center mt-4">&copy; Bodart Florian - <a href="https://github.com/BodartFlorian">GitHub</a></p>
 </footer>
