--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -35,12 +35,12 @@
     </div>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="sex_civility" id="femme" value="women"  required>
+        <input class="form-check-input" type="radio" name="sex_type" id="femme" value="women"  required>
         <label class="form-check-label" for="inlineRadio1" >Femme</label>
     </div>
 
     <div class="form-check form-check-inline ">
-        <input class="form-check-input" name="sex_civility" type="radio" id="homme" value="man" required>
+        <input class="form-check-input"  type="radio" name="sex_type" id="homme" value="man" required>
         <label class="form-check-label" for="inlineRadio2">Homme</label>
     </div>
     
